@@ -1,2 +1,31 @@
 # Group-Ting-Fam
 CPSC233
+
+https://github.com/krang-8/Group-Ting-Fam (Access is required as the repository is private)
+Use JDK 13 if possible but other versions should work.
+
+                       These files are used to develop the final project and are updated during the 
+                                        course of the development of the game. 
+
+
+                                                    // {UN}TITLED GAME
+       
+1.     From the branch tab, download the folder titled "FinalSubmissionSrc".
+2.     Extract the ZIP file into a folder.
+3.     Import the extracted files into the src folder of your IDE of chosing.
+       We recommend Eclipse or IntelliJ. 
+4.     Run the main class In the JavaFx Application located through the packages at
+       /View/javafx/ApplicationWindow.
+       
+       <src
+            .
+            .
+            .
+            <View
+                 <javafx
+                        ->class ApplicationWindow
+                        
+       if it doesn't work add this commandline to your 
+       VM Configurations : --module-path "(Path to javafx Library)" --add-modules javafx.controls,javafx.fxml
+                 
+5.     Press "New Game" to start the game and ENJOY! :D
